# adapter

./: CMakeLists.txt  main.cpp  myprim.usda  plugInfo.json  widget.cpp  widget.h
lib/: CMakeLists.txt  test.cpp
